--- a/TileMap/index.html
+++ b/TileMap/index.html
@@ -37,11 +37,13 @@
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/AStar.js"></script>
+	<script egret="game" src="bin-debug/Character.js"></script>
 	<script egret="game" src="bin-debug/Grid.js"></script>
 	<script egret="game" src="bin-debug/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/Map.js"></script>
 	<script egret="game" src="bin-debug/Point.js"></script>
+	<script egret="game" src="bin-debug/StateMachine.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
