--- a/TileMap/index.html
+++ b/TileMap/index.html
@@ -44,6 +44,7 @@
 	<script egret="game" src="bin-debug/Map.js"></script>
 	<script egret="game" src="bin-debug/Point.js"></script>
 	<script egret="game" src="bin-debug/StateMachine.js"></script>
+	<script egret="game" src="bin-debug/Task.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
