--- a/TileMap/index.html
+++ b/TileMap/index.html
@@ -42,6 +42,7 @@
 	<script egret="game" src="bin-debug/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/Map.js"></script>
+	<script egret="game" src="bin-debug/NPC.js"></script>
 	<script egret="game" src="bin-debug/Point.js"></script>
 	<script egret="game" src="bin-debug/StateMachine.js"></script>
 	<script egret="game" src="bin-debug/Task.js"></script>
